Attempt to summarise the "augmenting" issue

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -504,14 +504,14 @@ That said, even under SRS, nonresponse analogous bias can be caused by non-respo
 
 ### Survey design
 
-The DHS employs a two-stage sampling procedure.
-In the first stage, typically ennumeration areas from a recently conducted census are used as the primary sampling unit, or cluster.
-The clusters are assigned strata $h$ by region, as well as by urban-rural status.
-After appropriate sample sizes $n_h$ are determined, EAs are sampled with probability proportional to size
+The DHS employs a two-stage sampling procedure, outlined here following @measure2012sampling.
+In the first stage, ennumeration areas from a recently conducted census are typically used as the primary sampling unit, or cluster.
+Each cluster is assigned to a strata $h$ by region, as well as by urban-rural status.
+After appropriate strata sample sizes $n_h$ are determined, EAs are sampled with probability proportional to number of households
 \begin{equation}
 \pi_{1hj} = n_h \times \frac{N_{hj}}{\sum_j N_{hj}},
 \end{equation}
-where $N_{hj}$ is the number of households selected in strata $h$ and cluster $j$.
+where $N_{hj}$ is the number of households in strata $h$ and cluster $j$.
 In the second stage, the secondary sampling units are households.
 All households in the selected cluster are listed, before being sampled systematically at a regular interval, with equal probability
 \begin{equation}
