More improvements to conclusions section

--- a/references.bib
+++ b/references.bib
@@ -2968,3 +2968,15 @@ URL = {https://doi.org/10.1214/12-SS102}
   number={3},
   year={2023}
 }
+
+@article{grieve2023importance,
+  title={The importance of investing in data, models, experiments, team science, and public trust to help policymakers prepare for the next pandemic},
+  author={Grieve, Richard and Yang, Youqi and Abbott, Sam and Babu, Giridhara R and Bhattacharyya, Malay and Dean, Natalie and Evans, Stephen and Jewell, Nicholas and Langan, Sin{\'e}ad M and Lee, Woojoo and others},
+  journal={PLOS Global Public Health},
+  volume={3},
+  number={11},
+  pages={e0002601},
+  year={2023},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
