--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -19,7 +19,7 @@ bibliography: references.bib
 
 <!-- JWE: Minor corrections often involve (1) fixing typos, (2) clarifying things, (3) elaborating on the contributions to science and implications of the PhD in the conclusions chapter [by far the most common point of examiner feedback] -->
 
-This chapter concludes the thesis by discussing the most important contributions, limitations, promising avenues for future work, and broader reflections about the work.
+This chapter concludes the thesis by discussing its most important contributions, limitations, some promising avenues for future work, and broader reflections about the work.
 
 ## Contributions
 
@@ -34,43 +34,43 @@ knitr::include_graphics("figures/conclusions/global-update.png")
 ```
 
 Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy [@unaids2021global].
-Risk group proportion estimates were used to disaggregate HIV prevalence and incidence estimates by behaviour, and assess the benefits of a variety of risk stratification strategies.
-This work forms the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
-At least 30 countries have now been included in the tool, extending from the 13 initially included [Figure \@ref(fig:global-update); @unaids2023global].
-The models informing the tool will be rerun each year with updated data as a part of UNAIDS annual HIV estimates process.
+Risk group proportion estimates were used to behaviorally disaggregate HIV prevalence and incidence, and assess the benefits of a variety of risk stratification strategies.
+This work is the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
+The tool now encompasses at least 30 countries, expanding from the initial 13 included [Figure \@ref(fig:global-update); @unaids2023global].
+Models will be rerun each year to populate the tool with updated information as a part of the UNAIDS annual HIV estimates process.
 Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation, including using two- and three-way Kronecker product interactions.
 
 Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by a challenging and practically important problem in evidence synthesis for small-area estimation of HIV indicators.
 Its most important contributions are two-fold.
 First, an implementation of INLA which is compatible with models specified using a `TMB` C++ template.
-Notably, this contribution enables practitioners to fit essentially any model using INLA for the first time.
+For the first time, practitioners can now fit essentially any model using INLA.
 Second, a quadrature rule which naturally extends the applicability of INLA methods to moderate hyperparameter dimension, by combining PCA and AGHQ.
 
 ## Limitations
 
-The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing empirical evidence experimentally.
-In part, this approach reflects the complexity of the models and methods used in this thesis.
+The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing experimental, empirical evidence. 
+This approach reflects the complexity of the models and methods used in this thesis.
 Understanding complex systems from a theoretical perspective can be challenging.
-That being said, much of the work done in this thesis would benefit from closer integration with statistical theory.
-Though end-to-end theoretical understanding is overly hopeful, significant advantages could come from better understanding of limiting cases, simplified versions, and components of complete procedures.
+That said, the work in this thesis would benefit from closer integration with statistical theory.
+While obtaining comprehensive theoretical understanding of models or algorithms may be too optimistic, there may be significant value in better understanding simplified examples, limiting cases, or constituent parts.
 
 In working most tangibly with real world data, Chapter \@ref(multi-agyw) inherits a wide range of limitations.
 To highlight a few:
-the external validity of risk ratios derived from cohort studies.
+the external validity of risk ratios derived from cohort studies, difficulties defining and measuring key population sizes, and under-reporting of high-risk sexual behaviour.
 
 ## Future work
 
-Promising avenues for future work that I would prioritise include:
+Promising avenues for future work, that I might prioritise, include:
 
-1. Although AGYW are disproportionately at risk of HIV infection, 56% of new infections in SSA occur in other demographic groups.
-As such, it would be valuable to extend the risk group model developed in Chapter \@ref(multi-agyw), and the derived prioritisation tool, to include all adults 15-49.
-This might involve modelling of age-stratified sexual partnerships [@wolock2021evaluating].
-Such a model would likely fall out of the scope of `R-INLA`, but would be possible to write with `TMB` and therefore amenable to the inference methods advanced in Chapter \@ref(naomi-aghq).
+1. It would be valuable to extend the risk group model developed in Chapter \@ref(multi-agyw), and the resulting tool, to include all adults 15-49.
+Although AGYW are disproportionately at risk of HIV infection, 56% of new infections in SSA occur in other demographic groups.
+Modelling of age-stratified sexual partnerships [@wolock2021evaluating] may help to overcome reporting biases by harmonising male and female reporting.
+This model would likely fall out of the scope of `R-INLA`, but would be possible to write with `TMB` and therefore amenable to the inference methods advanced in Chapter \@ref(naomi-aghq).
 
-2. Practical use of the INLA implementation developed in Chapter \@ref(naomi-aghq) would benefit significantly from improvements to its speed and usability.
-The most important speed enhancement would likely come from using the simplified approximation to the Laplace marginals developed by @wood2020simplified.
-Usability would be improved by integration of the method into statistical software, first and foremost via the `aghq` package.
-The primary difficulty, as it appears now, which would have to be overcome is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
+2. The INLA implementation developed in Chapter \@ref(naomi-aghq) would benefit significantly from improvements to its speed and usability.
+The most important speed enhancement would come from using the simplified approximation to the Laplace marginals developed by @wood2020simplified.
+Usability would be improved by providing the method as a part of statistical software, likely via the `aghq` package.
+The primary difficulty which would have to be overcome to do so is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
 
 (ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM, increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)). More broadly, it would be valuable to better understand, and aspirationally have diagnostics for, the circumstances under which more accurate approximations are required.
 
@@ -78,9 +78,9 @@ The primary difficulty, as it appears now, which would have to be overcome is th
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.png")
 ```
 
-3. The universal INLA implementation developed in Chapter \@ref(naomi-aghq) enables methodological research.
+3. New methodological research could be done, enabled by the universal INLA implementation developed in Chapter \@ref(naomi-aghq).
 For example, INLA-like methods can now be tested for a broader class of models, such as the Loa loa and Naomi ELGMs (Sections \@ref(loaloa) and \@ref(malawi)).
-This type of research benefits greatly from a single `TMB` C++ template for the log-posterior supporting inference using multiple methods, including gold-standard NUTS via `tmbstan`.
+That a single `TMB` C++ template for the log-posterior supports inference using multiple methods, including gold-standard NUTS via `tmbstan`, is a substantial asset in conducting this type of research.
 
     Within this broader class of models, I wonder about the best way to achieve accurate results given a certain computational budget.
     How should computational effort be traded-off between additional hyperparameter grid points and more accurate latent field approximations?
@@ -106,7 +106,8 @@ In demonstrating some of its capabilities, I hope this thesis contributes to its
 There are both direct and indirect paths to impact for the work in this thesis.
 Directly, the methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) may eventually lead to marginally more accurate indicator estimates, contributing to a broadly more effective response.
 However, these improvements in accuracy seem of minor consequence within the broader context of the HIV response, and factors limiting its effectiveness.
-The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact, and indeed I have seen evidence of engagement with the work by decision makers.
+The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact.
+Indeed, I have seen evidence of engagement with this work by decision makers, though this alone is not sufficient to generate impact.
 
 To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
 I hope that having done so facilitates my work to be scrutinised, and more optimistically, built upon.
@@ -114,7 +115,7 @@ In part this hope has already been realised, as with limited input from me, Dr. 
 This would not have been possible without tools from the R ecosystem such as `rmarkdown` and `rticles` for reporting, `devtools` for R package development, as well as those written by software engineers within the MRC Centre for Global Infectious Disease Analysis such as `orderly` and `didehpc`.
 It is crucial that academia adjusts to appropriately incentivises software contributions, and encourages adaption of open science best practices.
 Work done to inform public health decision making should be held to high standards of transparency, reproducibility and collaboration.
-Especially so in an outbreak response scenario, where time is limited and decisions may be of significant consequence.
+Especially so in an outbreak response scenario [@grieve2023importance], where time is limited and decisions may be of significant consequence.
 
 <!-- Aims for HIV response going forward, and the surveillance capabilities needed to meet them. -->
 <!-- Greater reliance on routine health system data. -->
