LOO and SLOO choropleths update in Appendix A

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -370,25 +370,25 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-zwe2016phia.png"))
 ```
 
-(ref:map-civ2017phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
+(ref:map-civ2017phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation for the Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
 
 ```{r map-civ2017phia, fig.cap="(ref:map-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-civ2017phia.png"))
 ```
 
-(ref:map-mwi2016phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Malawi 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)B).
+(ref:map-mwi2016phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation for the Malawi 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)B).
 
 ```{r map-mwi2016phia, fig.cap="(ref:map-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-mwi2016phia.png"))
 ```
 
-(ref:map-tza2017phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Tanzania 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)C).
+(ref:map-tza2017phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation for the Tanzania 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)C).
 
 ```{r map-tza2017phia, fig.cap="(ref:map-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-tza2017phia.png"))
 ```
 
-(ref:map-zwe2016phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ for the Zimbabwe 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)D).
+(ref:map-zwe2016phia) Choropleth showing the pointwise CRPS in estimating $\rho_i$ using either leave-one-out or spatial leave-one-out cross-validation for the Zimbabwe 2016 PHIA survey (Panel \@ref(fig:hiv-surveys)D).
 
 ```{r map-zwe2016phia, fig.cap="(ref:map-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-zwe2016phia.png"))
