Update the conclusions section

--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -41,10 +41,12 @@ Models will be rerun each year to populate the tool with updated information as 
 Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation, including using two- and three-way Kronecker product interactions.
 
 Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by a challenging and practically important problem in evidence synthesis for small-area estimation of HIV indicators.
-Its most important contributions are two-fold.
+Its most important methods contributions are two-fold.
 First, an implementation of INLA which is compatible with models specified using a `TMB` C++ template.
 For the first time, practitioners can now fit essentially any model using INLA.
 Second, a quadrature rule which naturally extends the applicability of INLA methods to moderate hyperparameter dimension, by combining PCA and AGHQ.
+Additionally, Chapter \@ref(naomi-aghq) provides detailed description and analysis of the Naomi.
+Indeed, @esra2023improved used tables and text from Appendix \@ref(naomi-aghq-appendix) in an update to @eaton2021naomi.
 
 ## Limitations
 
