--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -1,4 +1,4 @@
-# Fast approximate Bayesian inference
+# Fast approximate Bayesian inference {#naomi-aghq-appendix}
 
 ```{r}
 resource_version <-  list.files("resources/naomi-aghq")
