--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -103,6 +103,12 @@ resource_version <- list.files("../resources/naomi-aghq")
 knitr::include_graphics(paste0("../resources/naomi-aghq/", resource_version, "/depends/sd-latent.png"))
 ```
 
+#
+
+```{r exceedance-1inc, echo=FALSE, out.width="90%", fig.align = 'center'}
+knitr::include_graphics(paste0("../resources/naomi-aghq/", resource_version, "/depends/exceedance-1inc.png"))
+```
+
 # Acknowledgements
 
 Thanks to:
