Add in figure captions in Malawi case-study

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1474,7 +1474,7 @@ as.data.frame(t(time_taken)) %>%
 
 #### Point estimates
 
-(ref:mean-sd-alt-latent) The posterior mean and posterior standard deviation point estimates from each of the 
+(ref:mean-sd-alt-latent) The latent field posterior mean and posterior standard deviation point estimates from each inference method as compared with those from NUTS. The root mean square error (RMSE) and mean absolute error (MAE) are displayed in the top left. For both the posterior mean and posterior standard deviation, GPCA-AGHQ reduces RMSE and MAE as compared with GEB.
 
 ```{r mean-sd-alt-latent, fig.cap="(ref:mean-sd-alt-latent)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/mean-sd-alt-latent.png"))
@@ -1486,7 +1486,7 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 
 #### Meeting the second 90
 
-(ref:exceedance-second90) Figure caption.
+(ref:exceedance-second90) The probability each strata has met the second 90 (ART coverage above 81\%) calculated using each inference method, as compared with NUTS. The root mean square error (RMSE) and mean absolute error (MAE) are displayed in the top left.
 
 ```{r exceedance-second90, fig.cap="(ref:exceedance-second90)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/exceedance-second90.png"))
@@ -1498,7 +1498,7 @@ Inferences from Naomi can be used to identify treatment gaps by calculating the 
  
 #### Finding strata with high incidence
 
-(ref:exceedance-1inc) Figure caption.
+(ref:exceedance-1inc) The probability each strata has high HIV incidence (above 1\% per year) calculated using each inference method, as compared with NUTS. The root mean square error (RMSE) and mean absolute error (MAE) are displayed in the top left.
 
 ```{r exceedance-1inc, fig.cap="(ref:exceedance-1inc)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/exceedance-1inc.png"))
