Run through spell checker with AI help

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -151,7 +151,7 @@ knitr::include_graphics("figures/bayesian/stan.png")
 The Monte Carlo methods discussed in Section \@ref(monte-carlo) make use of stochasticity to generate samples from the posterior distribution.
 Deterministic approximations offer an alternative approach, often focused more directly on approximating the posterior distribution or posterior normalising constant.
 These approaches can be faster than Monte Carlo methods, especially for large datasets or models.
-That said, they lack strong theoretical guaruntees of accuracy.
+That said, they lack strong theoretical guarantees of accuracy.
 
 One prominent deterministic approximation is the Laplace approximation.
 It involves approximating the posterior normalising constant using Laplace's method of integration.
@@ -434,7 +434,7 @@ This can be computationally costly, and so approximation strategies have been de
 Importance sampling methods using the the full posterior as a proposal are a notable example, including Pareto-smoothed importance sampling [PSIS; @vehtari2017practical].
 
 <!-- $K$-fold cross-validation, divide data into $K$ blocks. -->
-<!-- Other cross-validiation schemes for specific settings. -->
+<!-- Other cross-validation schemes for specific settings. -->
 <!-- Importance sampling less likely to work in some settings, like the spatial. -->
 
 ### Scoring rules
@@ -472,7 +472,7 @@ Demographic and Health Surveys [DHS; @measure2012sampling] are funded by the Uni
 Population-based HIV Impact Assessment (PHIA) surveys are funded by PEPFAR and run every four to five years in high HIV burden countries.
 
 Analysis of responses from survey methods can require specific methods.
-This section provides required background, before describing the survey design approach used by household surveys in SSA, and the methdos used to analyse this data in this thesis.
+This section provides required background, before describing the survey design approach used by household surveys in SSA, and the methods used to analyse this data in this thesis.
 
 ### Background
 
