--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -197,7 +197,7 @@ Exceptions were Cameroon and Kenya, where I conducted analyses one level higher 
 
 ## Model for risk group proportions
 
-Owing to the incomparability in estimating the $k = 4$ risk gorup across surveys, I took a two-stage modelling approach to estimate the four risk group proportions.
+Owing to the incomparability in estimating the $k = 4$ risk group across surveys, I took a two-stage modelling approach to estimate the four risk group proportions.
 Denote being in either the third or fourth risk group as $k = 3^{+}$.
 First, using all the surveys, I used a spatio-temporal multinomial logistic regression model to estimate the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
 This model is described in Section \@ref(st-multinomial).
@@ -289,7 +289,7 @@ I considered four models (Table \@ref(tab:multinomial-models)) for $\eta_{ita}$ 
 Observation random effects $\theta_{ita} \sim \mathcal{N}(0, 1000^2)$ with a vague prior distribution were included in all models to ensure the multinomial-Poisson transformation was valid.
 To capture country-specific proportion estimates for each category, I included category random effects $\beta_k \sim \mathcal{N}(0, \tau_\beta^{-1})$ and country-category random effects $\zeta_{ck} \sim \mathcal{N}(0, \tau_\zeta^{-1})$.
 Heterogeneity in risk group proportions by age was allowed by including age-country-category random effects $\alpha_{ack} \sim \mathcal{N}(0, \tau_\alpha^{-1})$.
-I considered several specifications for the space-cateogry $u_{ik}$ and time-cateogry effects $\gamma_{tk}$, described in Sections \@ref(spatial-re) and \@ref(temporal-re).
+I considered several specifications for the space-category $u_{ik}$ and time-category effects $\gamma_{tk}$, described in Sections \@ref(spatial-re) and \@ref(temporal-re).
 
 Use of the multinomial-Poisson transformation required all random effects to include interaction with category $k$, because any random effects which did not include interaction with category would give no change in category probabilities.
 The only exception were the observation random effects, which were included as a device to ensure the transformation is valid, rather than to model the data.
