--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -34,7 +34,7 @@ knitr::include_graphics("figures/conclusions/global-update-conclusion.png")
 ```
 
 Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy [@unaids2021global].
-Risk group proportion estimates were used to behaviorally disaggregate HIV prevalence and incidence, and assess the benefits of a variety of risk stratification strategies.
+Risk group proportion estimates were used to behaviourally disaggregate HIV prevalence and incidence, and assess the benefits of a variety of risk stratification strategies.
 This work is the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
 The tool now encompasses at least 30 countries, expanding from the initial 13 included [Figure \@ref(fig:global-update); @unaids2023global].
 Models will be rerun each year to populate the tool with updated information as a part of the UNAIDS annual HIV estimates process.
