--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -48,7 +48,7 @@ If you notice any typos or other issues with the work, feel free to open an [iss
 | INLA    | Integrated Nested Laplace Approximation          |
 | GP      | Gaussian Process                                 |
 | CAR     | Conditionally Auto-regressive                    |
-| ICAR    | Intrisic Conditionally Auto-regressive           |
+| ICAR    | Intrinsic Conditionally Auto-regressive           |
 | SAE     | Small-Area Estimation                            |
 | GMRF    | Gaussian Markov Random Field                     |
 | HMC     | Hamiltonian Monte Carlo                          |
