--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -77,7 +77,7 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59%. Yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the global disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the theiss, is that of @okabe2008color. It is designed to be colourblind friendly, and the default in @wilke2019fundamentals.
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59%. Yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the global disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is designed to be colourblind friendly, and the default in @wilke2019fundamentals.
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
@@ -200,7 +200,7 @@ To give the most complete picture of the epidemic, it is important to use multip
 The most prominent categories are:
 
 * **Household surveys** are large, national, cross-sectional studies.
-The surveys conducted in the most countires are Demographic and Health Surveys [DHS ;@measure2012sampling], which include a wide range of health related questions, and more HIV-specific Population-based HIV Impact Assessment [PHIA; @phia] and AIDS Indicator Surveys (AIS).
+The surveys conducted in the most countries are Demographic and Health Surveys [DHS ;@measure2012sampling], which include a wide range of health related questions, and more HIV-specific Population-based HIV Impact Assessment [PHIA; @phia] and AIDS Indicator Surveys (AIS).
 Some countries also implement their own survey series, such as the South Africa Behavioural, Sero-status and Media Impact Survey (SABSSM).
 Household surveys provide high quality standardised data about HIV, typically designed to furnish nationally-representative estimates.
 Both DHS and PHIA surveys collecting demographic, behavioural, and clinical information.
