--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -884,7 +884,7 @@ Convergence diagnostics are in Appendix \@ref(rstan-epil).
 
 #### Comparison {#epil-comparison}
 
-Posterior means and standard deviations for the the six regression parameters $\boldsymbol{\mathbf{\beta}}$ from the inference methods implemented in `TMB` (Section \@ref(epil-gauss-eb-tmb), \@ref(epil-gauss-aghq-tmb), \@ref(epil-gauss-aghq-tmb), \@ref(epil-laplace-aghq-tmb)) were highly similar to their `R-INLA` analogs in Section \@ref(epil-inla) (Figure \@ref(fig:beta-mean-sd)).
+Posterior means and standard deviations for the the six regression parameters $\boldsymbol{\mathbf{\beta}}$ from the inference methods implemented in `TMB` (Section \@ref(epil-gauss-eb-tmb), \@ref(epil-gauss-aghq-tmb), \@ref(epil-gauss-aghq-tmb), \@ref(epil-laplace-aghq-tmb)) were highly similar to their `R-INLA` analogues in Section \@ref(epil-inla) (Figure \@ref(fig:beta-mean-sd)).
 Posterior distributions obtained were also similar.
 Figure \@ref(fig:intercept-comparison) shows ECDF difference plots for Gaussian or Laplace marginals from `TMB` and `R-INLA` (as compared with results from NUTS implemented in `tmbstan`) for $\beta_0$.
 These results provide evidence that the implementation of INLA in `TMB` is correct.
@@ -912,7 +912,7 @@ epil_time_rstan <- filter(epil_time, method == "NUTS", software == "rstan")
 epil_nuts_multiplier <- 100 * round(epil_time_tmbstan$time / epil_time_rstan$time, digits = 3)
 ```
 
-Figures \@ref(fig:epil-time) shows the number of seconds taken to fit the epilespy GLMM model for each approach.
+Figures \@ref(fig:epil-time) shows the number of seconds taken to fit the epilepsy GLMM model for each approach.
 Gaussian marginals with either EB or AGHQ via `TMB` were the fastest approach.
 All of the approaches using `R-INLA` took a similar amount of time.
 The approaches using `TMB` to implement Laplace marginals were slower than their equivalent in `R-INLA`.
@@ -1385,7 +1385,7 @@ These parameters are partially identifiable as variation can either be explained
 On the other hand, the BYM2 log standard deviation $\log(\sigma)$ and logit proportion parameter $\text{logit}(\phi)$ were, as designed, more orthogonal (mean absolute correlation `r round(ar1_bym2_cor_grouped$cor_mean[2], 2)`, Figure \@ref(fig:alpha-x)).
 
 <!-- Which parameters had the lowest ESS? -->
-<!-- Other unidentifiablities in the model -->
+<!-- Other unidentifiables in the model -->
 
 The informativeness of data about a parameter can be summarised by the posterior contraction [@schad2021toward] which compares the prior variance $\mathbb{V}_\text{prior}(\psi)$ to posterior variance $\mathbb{V}_\text{post}(\psi)$ via
 \begin{equation}
@@ -1624,7 +1624,7 @@ Among the ELGM-type structures of particular interest for spatial epidemiology a
 The approach used to implement Laplace marginals with `TMB` was relatively ad-hoc, and involved modification of the `TMB` C++ template (Section \@ref(epil-laplace-eb-tmb)).
 For wider dissemination of this method, it is important that the user is not burdened with making these modifications.
 One possibility would be to change the `random` argument in `TMB::MakeADFun` to allow for indexing.
-Another (less desirable) option would be to algorithimically generate the modified `TMB` C++ template based on the original template.
+Another (less desirable) option would be to algorithmically generate the modified `TMB` C++ template based on the original template.
 
 (ref:package-downloads) Monthly R package downloads from the Comprehensive R Archive Network (CRAN) for `brms`, `glmmTMB`, `nimble`, `rstan` and `TMB`, obtained using the @cranlogs R package. Unfortunately, `R-INLA` is not available from CRAN, and so could not be included in this figure. The official `rstan` documentation recommends installation of a development version hosted outside CRAN.
 
