--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -495,7 +495,7 @@ The value 2.5 avoids placing significant prior density on the region $\sigma_u >
 A weakly informative $\mathcal{N}(-2, 1)$ prior was placed on $\beta_0$, setting most of the prior probability density for $\text{logit}^{-1}(\beta_0)$ within a range typical for a disease prevalence.
 
 In cases where the length-scale $l$ was fixed, it was set based on the geometry such that points an average distance apart had 1\% correlation [@best1999bayesian].
-In cases where a prior distribution was set on the length-scale it was $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$, with $a$ and $b$ chosen for each geometry such that 1\% of the prior mass was below 0.1 and 1\% of the prior mass was above the maximum distance between points [@betancourt2017robust].
+In cases where a prior distribution was set on the length-scale it was $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$, with $a$ and $b$ chosen for each geometry such that 5\% of the prior mass was below the 5% quantile for distance between points and 5\% of the prior mass was above the 95% quantile [@betancourt2017robust].
 The sensitivity analysis in Appendix \@ref(lengthscale-prior) illustrates the extent to which six possible lengthscale prior distributions (Figure \@ref(fig:lengthscale-prior)) effect the lengthscale posterior distribution (Figure \@ref(fig:lengthscale-posterior)).
 
 #### Inference
