Include 2 KS plots into naomi-aghq chapter

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1482,6 +1482,12 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 
 #### Distributional quantities
 
+(ref:ks-summary) Figure caption.
+
+```{r ks-summary, fig.cap="(ref:ks-summary)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/ks-summary.png"))
+```
+
 ### Exceedance probabilities
 
 #### Meeting the second 90
