--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -371,3 +371,9 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 ```
 
 ### Distributional quantities
+
+(ref:ks-ess) Figure caption.
+
+```{r ks-ess, fig.cap="(ref:ks-ess)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/ks-ess.png"))
+```
