--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -45,7 +45,7 @@
 \item[INLA] Integrated Nested Laplace Approximation.
 \item[GP] Gaussian Process.
 \item[CAR] Conditionally Auto-regressive.
-\item[ICAR] Intrisic Conditionally Auto-regressive.
+\item[ICAR] Intrinsic Conditionally Auto-regressive.
 \item[SAE] Small-Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
