Small conclusions update

--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -84,14 +84,15 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.
 
 3. The universal INLA implementation developed in Chapter \@ref(naomi-aghq) enables empirical and methodological research that was previously not possible, or prohibitively difficult.
 
-    First, INLA-like methods can now be tested for a broader class of models, such as the Loa loa and Naomi ELGMs (Sections \@ref(loaloa) and \@ref(malawi)).
+    INLA-like methods can now be tested for a broader class of models, such as the Loa loa and Naomi ELGMs (Sections \@ref(loaloa) and \@ref(malawi)).
     That a single `TMB` C++ template for the log-posterior supports inference using multiple methods, including gold-standard NUTS via `tmbstan`, is a substantial asset in conducting this type of research.
-    Within this broader class of models, I wonder about the best way to achieve accurate results given a certain computational budget.
-    How should computational effort be traded-off between additional hyperparameter grid points and more accurate latent field approximations?
-    For example, for the Loa loa ELGM, the accuracy benefit of using Laplace marginals was more than using a higher number of AGHQ nodes per dimension (Figure \@ref(fig:conditional-simulation-diff-k-fixed)).
+    
+    As an example research question, within this class of models, what is the best way to obtain accurate inferences within a fixed computational budget.
+    Is it better to use additional hyperparameter grid points, or more accurate latent field approximations?
+    For the Loa loa ELGM, the benefit of Laplace marginals was greater than a denser AGHQ grid (Figure \@ref(fig:conditional-simulation-diff-k-fixed)).
 
-    Second, it is relatively easy to make alterations to the implementaiton, facilitating possible innovation in the design of INLA-like algorithms.
-    It was previously difficult for researchers who are not developers of `R-INLA` to engage in methodological work about the INLA method.
+    Additionally, it is relatively easy to make alterations to the implementaiton, facilitating possible innovation in the design of INLA-like algorithms.
+    Previously, it has been difficult for researchers not involved in development of `R-INLA` to engage in methodological work about the INLA method.
 
     Theoretical research could be conducted to complement the work described above, extending the findings of @bilodeau2022stochastic.
     This work is benefited by the exhaustive specification of the INLA-like algorithms used in this thesis.
@@ -114,7 +115,7 @@ There are both direct and indirect paths to impact for the work in this thesis.
 Directly, the methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) may eventually lead to marginally more accurate indicator estimates, contributing to a broadly more effective response.
 However, these improvements in accuracy seem of minor consequence within the broader context of the HIV response, and factors limiting its effectiveness.
 The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact.
-Indeed, I have seen evidence of engagement with this work by decision makers, though this alone is not sufficient to generate impact.
+Indeed, I have seen evidence of engagement with this work by decision makers.
 
 To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
 I hope that having done so facilitates my work to be scrutinised, and more optimistically, built upon.
